# multiagent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
subprojects/dynamic-waste-kg/: .env.example  .env.neo4j.example  README.md  docker-compose.neo4j.yml  docker-compose.yml  pyproject.toml
subprojects/dynamic-waste-kg/docs/: README.md  annotated_image_kg_walkthrough_zh.md  beginner_guide.md  cdw2026_dataset_merge_and_asbestos_strategy_zh.md  current_yolo_training_results_zh.md  dataset_and_perception_pipeline_zh.md  deepseek_reviewer_and_venv_zh.md  e0_e4_experiment_results_and_feedback_explanation_zh.md  e1_yolo11n_waste11_test_result_zh.md  e4_strict_removal_audit_summary_zh.md  full_beginner_pipeline_zh.md  glass_debris_dataset_merge_zh.md  journal_manuscript_draft_zh.md  knowledge_graph_runtime_zh.md  knowledge_seed_zh.md  llm_reviewer_config_zh.md  local_environment_profile_zh.md  neo4j_beginner_visualization_zh.md  neo4j_storage_zh.md  paper_method_system_design_zh.md  post_capture_training_llm_kg_guide_zh.md  realsense_rgbd_pipeline_zh.md  single_image_kg_example_zh.md  windows_e4_reshoot_guide_zh.md  yolo_e50_training_check_zh.md  yolo_llm_integration_zh.md  yolo_training_result_analysis_zh.md  小论文完善稿_策略感知任务状态构建_DKG_VLM_2026-06-25.md  小论文实验完善指令_完整修订版.md  小论文实验执行指令.md  小论文进一步完善稿_任务状态构建_YOLO_VLM_DKG_unknown_2026-07-01.md
subprojects/dynamic-waste-kg/outputs/: README.md
subprojects/dynamic-waste-kg/paper_experiments/: README.md
subprojects/dynamic-waste-kg/scripts/: README.md  audit_waste12_dataset.py  build_grouped_dataset.py  capture_realsense_frame.py  (+13 more)
(+271 files in other folders)
