[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-waste-kg"
version = "0.1.0"
description = "Dynamic waste knowledge graph prototype for perception, planning, and execution"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["wastekg*"]
